--- a/03 - CSS/index2.html
+++ b/03 - CSS/index2.html
@@ -11,9 +11,17 @@
 <body>
     <div class="wrapper">
         <div class="one">
-            Vacunacion<span>Pepe</span>
+            <div class="titulo">Vacunacion</div>
+            <div class="controles">Vacunacion</div>
         </div>
-        <div class="two caja">Two</div>
+        <div class="two caja">
+            <img class="triangulo1"
+                src="https://raw.githubusercontent.com/R-V-L/Frontend-LaunchX/master/03%20-%20CSS/img/triangulo.png"
+                alt="triangulo1">
+            <img class="triangulo2"
+                src="https://raw.githubusercontent.com/R-V-L/Frontend-LaunchX/master/03%20-%20CSS/img/triangulo.png"
+                alt="triangulo2">
+        </div>
         <div class="three caja"></div>
         <div class="four caja">Cuatro</div>
         <div class="five caja">Five</div>
@@ -26,6 +34,21 @@
         opacity: 50%;
     }
 
+    .titulo {
+        color: #3252d0;
+        font-size: 36px;
+        top: 30px;
+        position: relative;
+        left: 7%;
+    }
+
+    .controles {
+        color: #7c89a0;
+        font-size: 28px;
+        left: 50%;
+        position: relative;
+    }
+
     .wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -36,12 +59,32 @@
     .one {
         grid-column: 1 / 5;
         grid-row: 1;
+        background: linear-gradient(to right, white 50%, #e9f1fc 50%);
     }
 
     .two {
         background: #ffffff;
         grid-column: 1 / 3;
         grid-row: 2 / 7;
+    }
+
+    .triangulo1 {
+        transform: rotate(180deg);
+        width: 150px;
+        height: 80px;
+        position: relative;
+        left: 5%;
+    }
+
+
+    .triangulo2 {
+        transform: rotate(-90deg);
+        width: 250px;
+        height: 150px;
+        position: relative;
+        right: -50px;
+        top: 400px;
+        float: right;
     }
 
     .three {
