--- a/03 - CSS/index2.html
+++ b/03 - CSS/index2.html
@@ -28,6 +28,14 @@
     </div>
 </body>
 <style>
+    body {
+        font-family: 'loew-heavy';
+        src: url('https://github.com/R-V-L/Frontend-LaunchX/blob/master/03%20-%20CSS/font/loew-heavy-webfont.woff2?raw=true') format('woff2'),
+            url('https://github.com/R-V-L/Frontend-LaunchX/blob/master/03%20-%20CSS/font/loew-heavy-webfont.woff?raw=true') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
     .caja {
         border: 0px solid;
         background: orange;
