--- a/03 - CSS/pokedexapi.html
+++ b/03 - CSS/pokedexapi.html
@@ -4,60 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Pokedex</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/autoComplete.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/css/autoComplete.min.css">
 </head>
 <body>
-    <h1>Pokedex LaunchX</h1>
-    <input type="text" placeholder="pikachu" name="pokeName" id="pokeName">
-    <br>
-    <img id="pokeImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Pokebola-pokeball-png-0.png/769px-Pokebola-pokeball-png-0.png" alt="Pokemon" width="150px">
-    <br>
-    <button onclick="fetchPokemon()">Cambiar pokemon</button>
-</body>
+    <div class="container">
+		<div class="row">
+			<div class="col-sm-6 offset-sm-3 mt-4 mb-4 text-center">
+				<h2>Pokedex</h2>
+				<p>Proyecto para LaunchX innovacion, por R-V-L.<br>Se usa PokeAPI para obtener la informacion y autocomplete.js para el autocompletado</p>
+			</div>
+		</div>
+
+		<div class="text-center">
+			<div class="user-pic">
+				<img id="pokeImg"  src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c31f.png" alt="User Pic" width="150px">
+			</div>
+			<h4 id="pokeNombre"></h4>
+			<h6 id="pokeNumero"></h6>
+			<hr>
+			<p id="altura"></p>
+            <p id="tipos"></p>
+            <p id="ataques"></p>
+			<hr>
+            <input class="form-control-sm" id="pokeName" type="text" autocorrect="off" autocomplete="off" autocapitalize="off">
+            <a onclick="fetchPokemon()" class="btn btn-danger">Buscar</a>
+            <div class="position-absolute invisible autocomplete" id="autocomplete"></div>		
+		</div>
+	</div>
+
+<script src="autocomplete.js"></script>
 <script>
-    function getPokemonNames() {
+    var pokemon = []
+    
+    function obtenerNombresPokemon() {           
         const url = "https://pokeapi.co/api/v2/pokemon/?limit=1126"
         fetch(url).then((res) => {
             return res.json()
-        }).then((data) => {            
-            // console.log(data.results)
+        }).then((data) => {
             for (i in data.results) {
-                console.log(data.results[i].name)
+                pokemon.push(data.results[i].name)
             }
         })
-    }
-
-    getPokemonNames()
+    } 
+    obtenerNombresPokemon()
+    set_autocomplete('pokeName', 'autocomplete', pokemon);
 
     function fetchPokemon() {
         const pokeName = document.getElementById("pokeName").value.toLowerCase()
         const url = `https://pokeapi.co/api/v2/pokemon/${pokeName}`
         fetch(url).then((res) => {
-            //console.log(res)
             if(res.status != 200) {
-                console.log(res)
-                pokeImage("https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Pokebola-pokeball-png-0.png/769px-Pokebola-pokeball-png-0.png")
+                alert("Error. Pokemon no existe")
             } else {
                 return res.json()
             }
         }).then((data) => {
-            console.log(data)
-            let pokeImg = data.sprites
-            console.log(pokeImg.front_default)
-            pokeImage(pokeImg.front_default)
+            pokeInfo(data.sprites.front_default, data.name.toUpperCase(), data.id, data.height, data.types, data.moves)
         })
     }
 
-    function pokeImage(url) {
-        const pokeImg = document.getElementById("pokeImg")
-        pokeImg.src = url
-    }
-
-    function imprimir() {
-        console.log("Fierro pariente")
-        console.log("Hola ")
+    function pokeInfo(url, name, id, height, types, moves) {
+        document.getElementById("pokeImg").src = url
+        document.getElementById("pokeNombre").innerHTML = name
+        document.getElementById("pokeNumero").innerHTML = "# " + id
+        document.getElementById("altura").innerHTML = "Altura: " + height + "0 cm"
+        let tipos = []
+        let ataques = []
+        for (i in types){
+            tipos.push(types[i].type.name)
+        }
+        for (i in moves){
+            ataques.push(moves[i].move.name)
+            if(i > 3) {
+                break
+            }
+        }
+        document.getElementById("tipos").innerHTML = "Tipo: " + tipos.toString()
+        document.getElementById("ataques").innerHTML = "Ataques: " + ataques.toString()
     }
 </script>
+<style>
+    .autocomplete {
+        left: calc(50% - 125px);
+    }
+    .user-pic {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin: 20px auto 20px;
+        border-left: 3px solid #ddd;
+        border-right: 3px solid #ddd;
+        border-top: 3px solid red;
+        border-bottom: 3px solid red;
+    }
+</style>
+</body>
 </html>
