--- a/03 - CSS/index.html
+++ b/03 - CSS/index.html
@@ -23,15 +23,12 @@
             margin-top: 30px;
             margin-bottom: 30px;
             font-weight: bold;
+            font-size: 28px;
         }
 
         .navbar {
             background: white;
             background: linear-gradient(to right, white 50%, #e7f3fc 50%);
-        }
-
-        .navbar-brand {
-            font-size: 28px;
         }
 
         /* Pen-specific styles */
@@ -108,6 +105,10 @@
         article {
             margin-top: -150px;
         }
+        img {
+            max-width: 85%;
+            height: auto;
+        }
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -134,16 +135,11 @@
             <article>
                 <h1 class="h1-titulo">Combate El Virus Con Vacunas</h1>
                 <p>Weekends don't count unless you spend them doing something completely pointless.</p>
-
             </article>
         </div>
         <div class="right-half">
             <article>
-                <h1 class="h1-titulo">Right Half</h1>
-                <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
-                sadasdsad
-                asdadsds
-
+                <img src="./img/vaccine.png" alt="Vacuna" >
             </article>
         </div>
         <div class="triangulo1"></div>
