--- a/03 - CSS/index2.html
+++ b/03 - CSS/index2.html
@@ -125,7 +125,7 @@
         grid-column: 3 / 5;
         grid-row: 2 / 10;
         opacity: 100% !important;
-        background: url('https://i.imgur.com/aoGc9Oz.png'), linear-gradient(to bottom right, #0899e6, #375fda);
+        background: url('./img/vaccine.png'), linear-gradient(to bottom right, #0899e6, #375fda);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: bottom;
