--- a/03 - CSS/index3.html
+++ b/03 - CSS/index3.html
@@ -43,6 +43,10 @@
             <div class="art1">
                 <h1 class="h1-titulo">Combate El Virus Con Vacunas</h1>
                 <p class="text-muted">Detengamos la pandemia al acabar el virus con vacunas. No dejes que tu, o tu familia, se infecten.</p>
+                <div class="iconos-dorados-contenedor">
+                    <div><span class="material-icons iconos-dorados">verified_user</span> La mejor proteccion</div>
+                    <div><span class="material-icons iconos-dorados">star</span> Vacunas seleccionadas</div>
+                </div>
             </div>
         </div>
         <div class="tres"></div>
@@ -171,6 +175,16 @@
     .material-icons {
         background: #e9f1fe;
         color: #3353d1;
+    }
+
+    .iconos-dorados {
+        background: #fffdf5;
+        color: #ffd012;
+    }
+
+    .iconos-dorados-contenedor {
+        display: flex;
+        justify-content: space-between;
     }
 
     select, .date {
