--- a/03 - CSS/index3.html
+++ b/03 - CSS/index3.html
@@ -78,10 +78,63 @@
                   </div>
             </div>
         </div>
-        <div class="cinco vacunasimagenes"></div>
-        <div class="seis vacunasimagenes"></div>
-        <div class="siete vacunasimagenes"></div>
-        <div class="ocho vacunasimagenes"></div>
+        <div class="cinco">
+            <div class="row2">
+                <div class="column2">
+                    <img src="./img/astrazeneca.png" width="50%" alt="astrazeneca">
+                </div>
+                <div class="column2">
+                    <img src="./img/sinovac.png" width="50%" alt="sinovac" style="margin-top: 17px;">
+                </div>
+                <div class="column2">
+                    <img src="./img/pfizer.png" width="50%" alt="pfizer" style="margin-top: -10px;">
+                </div>
+                <div class="column2 columnatriangulo">
+                    <img src="./img/moderna.png" width="50%" alt="moderna" style="margin-top: 15px;">
+                </div>
+            </div>         
+        </div>
+        <div class="seis">
+            <div class="triangulo3"></div>
+            <div class="triangulo4"></div>
+            <div class="art2">
+                <h1 class="h1-titulo">¿Porque deberia vacunarme?</h1>
+                <p class="text-muted">Para evitar cualquier duda respecto a si deberia tomar la vacuna del COVID-19, observe los siguientes beneficios respecto a la vacuna:</p>
+            </div>
+        </div>
+        <div class="siete">
+            <div class="card-group">
+                <div class="card card2">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card card2">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                  <div class="card card2">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                  <div class="card card2">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+              </div>
+        </div>
+        <div class="ocho"></div>
     </div>
 </body>
 
@@ -202,46 +255,77 @@
     }
 
     .cinco {
-        grid-column: 1;
+        grid-column: 1 / 5;
         grid-row: 10;
-        background: url('./img/astrazeneca.png');
-        max-height: 50%;
+        padding-left: 4%;
+        padding-right: 4%;
     }
-    
-    .seis {
-        grid-column: 2;
-        grid-row: 10;
-        background: url('./img/sinovac.png');
-        max-height: 30%;
+
+    .column2 {
+        width: 25%; 
+        float: left;
+        justify-content: center;
+        filter: grayscale(100%);
+        opacity: 25%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        display: table-cell; 
+        vertical-align: middle; 
+        text-align: center;
+    }
+
+    .triangulo3 {
+        width: 0px;
+        height: 0px;
+        border-bottom: 100px solid;
+        border-left: 100px solid transparent;
+        opacity: 100% !important;
+        top: -100px;
+        left: calc(100% - 100px);
         position: relative;
-        bottom: -20%;
+        color: #f4f6fb;
+    }
+
+    .triangulo4 {
+        width: 0px;
+        height: 0px;
+        border-top: 100px solid;
+        border-left: 100px solid transparent;
+        opacity: 100% !important;
+        top: -100px;
+        left: calc(100% - 100px);
+        position: relative;
+        color: #f4f6fb;
+    }
+
+    .seis {
+        grid-column: 1 / 5;
+        grid-row: 11;
+        height: 50px;
+        border-top: 3px solid #f4f6fb;
+    }
+
+    .art2 {
+        top: -100px;
+        padding-left: 10%;
+        padding-right: 50%;
+        position: relative;     
     }
 
     .siete {
-        grid-column: 3;
-        grid-row: 10;
-        background: url('./img/pfizer.png');
-        position: relative;
-        bottom: -5%;
+        grid-column: 1 / 5;
+        grid-row: 15;
+        border-top: 3px solid #f4f6fb;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
-    .ocho {
-        grid-column: 4;
-        grid-row: 10;
-        background: url('./img/moderna.png');
-        max-height: 50%;
-        position: relative;
-        bottom: -10%;
+    .card2 {
+        margin: 5%; 
+        border: 3px solid ghostwhite;
+        border-left: 3px solid ghostwhite !important;
+        border-radius: 3%;
     }
-
-    .vacunasimagenes {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        margin: 20px;
-        filter: grayscale(100%);
-        opacity: 25%;
-    } 
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
